<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>aadd</groupId>
  <artifactId>alquiler-BarrenecheaMartinez</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <dep.slf4j.version>1.7.30</dep.slf4j.version>
  </properties>
  
  <dependencies>

		<!-- JAXB: solo es necesario si JDK > 8 -->

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.1</version>
		</dependency>


		<!-- test lib -->
		<dependency>
		<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet</artifactId>
			<version>2.41</version>
		</dependency>
	
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>2.41</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-jaxb</artifactId>
			<version>2.41</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-gson</artifactId>
			<version>2.41</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
		    <groupId>com.google.code.gson</groupId>
		    <artifactId>gson</artifactId>
		    <version>2.10.1</version>
		</dependency>

		
		<dependency>
	        <groupId>org.eclipse.persistence</groupId>
	        <artifactId>eclipselink</artifactId>
	        <version>2.7.9</version>
	    </dependency>
	    <dependency>
	        <groupId>javax.persistence</groupId>
	        <artifactId>javax.persistence-api</artifactId>
	        <version>2.2</version>
	    </dependency>
	    <dependency>
	        <groupId>mysql</groupId>
	        <artifactId>mysql-connector-java</artifactId>
	        <version>8.0.19</version>
	    </dependency>
	    <dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
	    
	    <dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>
	
		 <dependency>
	      <groupId>org.junit.jupiter</groupId>
	      <artifactId>junit-jupiter-api</artifactId>
	      <version>5.10.0</version>
	      <scope>test</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.junit.jupiter</groupId>
	      <artifactId>junit-jupiter-engine</artifactId>
	      <version>5.10.0</version>
	      <scope>test</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.assertj</groupId>
	      <artifactId>assertj-core</artifactId>
	      <version>3.24.2</version>
	      <scope>test</scope>
	    </dependency>
	</dependencies>
  <build>
    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.4.53.v20231009</version>
            </plugin>
        </plugins>
    </pluginManagement>
   </build>
</project>